--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -24,6 +24,26 @@
         font-size: size.$large-text;
         vertical-align: text-bottom;
     }
+    h2 {
+        align-self: flex-start;
+        @include mixin.center-items(flex-start);
+        position: relative;
+        width: 100%;
+        margin-bottom: 0.5 * size.$gap;
+        p {
+            color: color.$light-text;
+        }
+        .icon {
+            @include mixin.light-icon;
+            cursor: pointer;
+        }
+        .collapse {
+            &[collapsed="yes"] {
+                transform: rotate(-90deg);
+            }
+            transition: all 50ms linear;
+        }
+    }
 }
 
 .MuiInputAdornment-root {
