--- a/src/families/near/near.scss
+++ b/src/families/near/near.scss
@@ -44,6 +44,11 @@
             transition: all 50ms linear;
         }
     }
+    .add-action {
+        h2 {
+            display: block;
+        }
+    }
 }
 
 .MuiInputAdornment-root {
