--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,9 +1,69 @@
-@use 'sass/mixin';
-@use 'sass/base';
-@use 'sass/color';
-@use 'sass/size';
-@use 'sass/font';
-@use 'sass/animation';
+@use "sass/mixin";
+@use "sass/base";
+@use "sass/color";
+@use "sass/size";
+@use "sass/font";
+@use "sass/animation";
+
+.modal-dialog {
+    .MuiDialogContent-root {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+}
+
+.popup-menu {
+    position: relative;
+
+    &:hover .popup-menu-content {
+        visibility: visible !important;
+    }
+
+    .popup-menu-content {
+        visibility: hidden;
+        position: absolute;
+        left: size.$sidebar-width;
+        top: 0;
+        padding-left: 0.5 * size.$gap;
+        width: max-content;
+
+        ul {
+            padding: 0;
+            margin-left: 0;
+            background-color: color.$black;
+            color: color.$light-text;
+            font-size: size.$text;
+            border-radius: size.$task-radius;
+            list-style: none;
+            overflow: hidden;
+
+            li {
+                padding: 0.25 * size.$gap 0.5 * size.$gap;
+                cursor: pointer;
+
+                &:last-of-type {
+                    padding-bottom: 0.5 * size.$gap;
+                }
+
+                &:first-of-type {
+                    padding-top: 0.5 * size.$gap;
+                }
+
+                &:hover {
+                    background-color: rgba(color.$light, 0.1);
+                }
+
+                .MuiChip-root {
+                    background-color: color.$purple;
+                    font-size: 0.8 * size.$smaller-text;
+                    height: auto;
+                    margin-left: 1ch;
+                }
+            }
+        }
+    }
+}
 
 .sidebar-wrapper {
     position: fixed;
@@ -12,41 +72,48 @@
     height: 100%;
     width: size.$sidebar-width;
     background-color: color.$black;
-    box-shadow: 1px 10px 20px 0 rgba(0,0,0,0.2);
+    box-shadow: 1px 10px 20px 0 rgba(0, 0, 0, 0.2);
     z-index: 2;
 }
 
 .sidebar-container {
-    flex: 1;
     @include mixin.center-items(flex-start);
+    flex: 1;
     flex-flow: column nowrap;
+
     .title {
         position: relative;
         cursor: pointer;
         padding: calc(size.$gap - 0.5 * size.$large-text) 0;
+
         .logo {
             display: block;
             color: color.$light-text;
             font-size: 1.5 * size.$large-text;
         }
+
         .env {
             visibility: hidden;
             position: absolute;
             left: 60%;
             top: 50%;
+
             .icon {
                 color: color.$yellow;
                 font-size: size.$text;
             }
         }
+
         .env[env="testnet"] {
             visibility: visible;
         }
     }
+
     nav {
         display: flex;
         flex-flow: column nowrap;
         font-size: size.$text;
+
         a {
             text-align: center;
             line-height: size.$sidebar-width;
@@ -55,18 +122,22 @@
             height: size.$sidebar-width;
             font-size: size.$text;
             color: color.$light-text !important;
+
             &.active {
                 color: color.$text !important;
                 background-color: color.$white;
             }
+
             &:not(.active):hover {
                 background-color: rgba(color.$light, 0.1);
             }
         }
     }
+
     hr {
         width: 40%;
     }
+
     img {
         padding: 0.25 * size.$sidebar-width;
         width: 0.5 * size.$sidebar-width;
@@ -74,70 +145,28 @@
         fill: color.$light;
         cursor: pointer;
         opacity: 0.25;
+
         &:hover {
             opacity: 1;
-        }
-    }
-    .save, .load, .clear {
-        position: relative;
-        &:hover div {
-            visibility: visible !important;
-        }
-        div.save-menu, div.load-menu {
-            visibility: hidden;
-            position: absolute;
-            left: size.$sidebar-width;
-            top: 0;
-            padding-left: 0.5 * size.$gap;
-            width: max-content;
-            ul {
-                padding: 0;
-                margin-left: 0;
-                background-color: color.$black;
-                color: color.$light-text;
-                font-size: size.$text;
-                border-radius: size.$task-radius;
-                list-style: none;
-                overflow: hidden;
-                li {
-                    padding: 0.25 * size.$gap 0.5 * size.$gap;
-                    cursor: pointer;
-                    &:last-of-type {
-                        padding-bottom: 0.5 * size.$gap;
-                    }
-                    &:first-of-type {
-                        padding-top:  0.5 * size.$gap;
-                    }
-                    &:hover {
-                        background-color: rgba(color.$light, 0.1);
-                    }
-                    .MuiChip-root {
-                        background-color: color.$purple;
-                        font-size: 0.8 * size.$smaller-text;
-                        height: auto;
-                        margin-left: 1ch;
-                    }
-                }
-            }
         }
     }
 }
 
 .sidebar-button {
-	&.MuiButtonBase-root {
-		padding: 0;
-	}
+    &.MuiButtonBase-root {
+        padding: 0;
+    }
 
-	.MuiSvgIcon-root {
-		color: color.$light;
-		padding: 0.25 * size.$sidebar-width;
-		font-size: 1.5 * size.$large-text;
-		cursor: pointer;
+    .MuiSvgIcon-root {
+        color: color.$light;
+        padding: 0.25 * size.$sidebar-width;
+        font-size: 1.5 * size.$large-text;
+        cursor: pointer;
 
-		&:hover {
-				background-color: rgba(color.$light, 0.1);
-		}
-}
+        &:hover {
+            background-color: rgba(color.$light, 0.1);
+        }
+    }
 }
 
 .warn {
