--- a/sass/_color-dark.scss
+++ b/sass/_color-dark.scss
@@ -3,12 +3,12 @@ $purple: #cc99cd;
 $red: #e2777a;
 $blue: #6196cc;
 
-$highlight: #C8E3D4;
+$highlight: #c8e3d4;
 $primary: #37afa9;
 $light: #323f4b;
 $dark: #1f2933;
 
-$highlight20: #C8E3D420;
+$highlight20: #c8e3d420;
 $primary20: #37afa920;
 $light20: #323f4b20;
 $dark20: #1f293320;
