--- a/sass/_color-old.scss
+++ b/sass/_color-old.scss
@@ -3,32 +3,32 @@ $purple: #cc99cd;
 $red: #e2777a;
 $blue: #6196cc;
 
-$highlight: #C8E3D4;
+$highlight: #c8e3d4;
 $primary: #37afa9;
 $light: #e0e0e0;
 $dark: #888888;
 
-$highlight10: #C8E3D410;
+$highlight10: #c8e3d410;
 $primary10: #37afa910;
 $light10: #e0e0e010;
 $dark10: #88888810;
 
-$highlight20: #C8E3D420;
+$highlight20: #c8e3d420;
 $primary20: #37afa920;
 $light20: #e0e0e020;
 $dark20: #88888820;
 
-$highlight50: #C8E3D450;
+$highlight50: #c8e3d450;
 $primary50: #37afa950;
 $light50: #e0e0e050;
 $dark50: #88888850;
 
-$highlighta0: #C8E3D4a0;
+$highlighta0: #c8e3d4a0;
 $primarya0: #37afa9a0;
 $lighta0: #e0e0e0a0;
 $darka0: #888888a0;
 
-$highlightd0: #C8E3D4d0;
+$highlightd0: #c8e3d4d0;
 $primaryd0: #37afa9d0;
 $lightd0: #e0e0e0d0;
 $darkd0: #888888d0;
