--- a/sass/_color.scss
+++ b/sass/_color.scss
@@ -6,13 +6,13 @@ $yellow: #ffdf82;
 
 $lightest: #dcefea;
 $light: #b4ccca;
-$lightish: #A4BAB8;
+$lightish: #a4bab8;
 $darkish: #839595;
 $dark: #637171;
-$darkest: #424C4E;
+$darkest: #424c4e;
 
 $white: #edfdf9;
-$black: #323A3C;
+$black: #323a3c;
 
 $text: #2a2a2a;
 $light-text: #e0e0e0;
