--- a/src/components/builder/builder.scss
+++ b/src/components/builder/builder.scss
@@ -1,7 +1,7 @@
-@use 'sass/mixin';
-@use 'sass/size';
-@use 'sass/color';
-@use 'sass/base';
+@use "sass/mixin";
+@use "sass/size";
+@use "sass/color";
+@use "sass/base";
 
 .builder-container {
     @include mixin.center-items(flex-start);
