--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -1,7 +1,7 @@
-@use 'sass/mixin';
-@use 'sass/size';
-@use 'sass/color';
-@use 'sass/animation';
+@use "sass/mixin";
+@use "sass/size";
+@use "sass/color";
+@use "sass/animation";
 
 @mixin tutorial {
     content: " ";
