--- a/sass/_font.scss
+++ b/sass/_font.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Titillium+Web:ital,wght@0,200;0,400;0,600;1,400&display=swap');
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Titillium+Web:ital,wght@0,200;0,400;0,600;1,400&display=swap");
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
-$code: 'Roboto Mono', monospace;
-$text: 'Titillium Web', sans-serif;
+$code: "Roboto Mono", monospace;
+$text: "Titillium Web", sans-serif;
