--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -1,7 +1,7 @@
-@use 'sass/color';
-@use 'sass/size';
-@use 'sass/mixin';
-@use 'sass/animation';
+@use "sass/color";
+@use "sass/size";
+@use "sass/mixin";
+@use "sass/animation";
 
 .menu-container {
     position: fixed;
@@ -11,7 +11,7 @@
     height: calc(100% - 2 * size.$gap);
     min-width: calc(size.$task-width + 2 * size.$gap);
     background-color: color.$black;
-    box-shadow: 1px 10px 20px 0 rgba(0,0,0,0.2);
+    box-shadow: 1px 10px 20px 0 rgba(0, 0, 0, 0.2);
     border-radius: size.$task-radius;
     z-index: 2;
     transition: width animation.$menu-expand-time ease-out;
