--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -145,10 +145,14 @@
         grid-area: 1 / 1 / 9 / 3;
       }
       &.tokens {
-        grid-area: 1 / 3 / 9 / 6;
+        padding-bottom: size.$gap;
+        grid-area: 1 / 1 / 9 / 6;
+      }
+      &.wtokens {
+        grid-area: 1/ 6 / 9 / 9;
       }
       &.jobs {
-        grid-area: 1 / 6 / 8 / 9;
+        grid-area: 1 / 3 / 8 / 9;
         position: relative;
         .scroll-wrapper {
           @include mixin.no-scrollbar;
