--- a/src/components/popup-menu/popup-menu.scss
+++ b/src/components/popup-menu/popup-menu.scss
@@ -27,6 +27,7 @@
             overflow: hidden;
 
             li {
+                min-width: 100px;
                 padding: 0.25 * size.$gap 0.5 * size.$gap;
                 cursor: pointer;
 
