--- a/src/components/token/token.scss
+++ b/src/components/token/token.scss
@@ -5,7 +5,8 @@
     align-items: center;
     gap: 14px;
 
-    .icon {
+    .icon,
+    .icon svg {
         width: 32px;
         height: 32px;
     }
