--- a/src/components/dao/dao.scss
+++ b/src/components/dao/dao.scss
@@ -77,6 +77,7 @@
         &.loader {
             display: flex;
             flex-flow: column;
+            align-self: center;
             justify-content: center;
             align-items: center;
             font-size: size.$text;
